# Nomadic-Labs

./: README.md
Repo/Meetings/Notes/: Formation_Git_030521.md  Meeting_with_Ilias_030521.md
Repo/backup_files/: Readme.md  tezos-opt.opam
Repo/backup_files/bin_optimization_0/: README.md  dune  dune-project  main.ml
Repo/backup_files/bin_optimization_06/: .ocamlformat  michelson_interpreteur.ml  michelson_interpreteur.mli  michelson_value_sampler.ml  rewriting_rules.ml  rewriting_rules.mli  sampling.ml  sampling.mli  trans_valid.ml  tree.ml  tree.mli
Repo/backup_files/bin_optimization_06/output/: Test  Test.json  cons_twice  cps_fact  int_int  map_write  output_2  output_4  test_out2  xcat_new.json
Repo/backup_files/bin_optimization_06/scripts/: xcat.tz
Repo/backup_files/bin_optimization_06/scripts/problems/: create_contract_simple.tz  map_read.tz  multiple_entrypoints_counter.tz  string_string.tz  (+1 more)
Repo/backup_files/bin_optimization_06/test/: interpreteur_old_version.ml  michelson_sampling.ml
Repo/backup_files/bin_optimization_06/unused/: oracle.ml  oracle.mli
Repo/backup_files/bin_optimization_1/: README.md  dune  main.ml  test_helpers.ml
Repo/backup_files/bin_optimization_1/contracts_2/: hello.tz
Repo/backup_files/bin_optimization_2/: dune  main.ml  michelson_interpreteur.ml  michelson_interpreteur.mli  michelson_value_sampler.ml  michelson_value_sampler.mli
Repo/backup_files/bin_optimization_2/contracts/: hardlimit2.tz
Repo/backup_files/bin_optimization_3/: dune  michelson_interpreteur.ml  michelson_interpreteur.mli  michelson_value_sampler.ml  michelson_value_sampler.mli  parse_parameters_storage.ml  search.ml  test_helpers.ml  utils_sampler.ml  utils_sampler.mli
Repo/backup_files/bin_optimization_3/lib/: rewriting.ml
Repo/backup_files/bin_optimization_3/output/: insertion_sort  replay  test_output  xcat2
Repo/backup_files/bin_optimization_3/scripts/: add1.tz  map_write.tz  reentrancy.tz  simple_contract.tz
Repo/backup_files/bin_optimization_3/test/: start.py
Repo/backup_files/bin_optimization_4/: dune  main.ml  michelson_value_sampler.mli  rewriting.ml
Repo/backup_files/bin_optimization_4/lib/: dune
Repo/backup_files/bin_optimization_4/output/: add1  add1_list  always  big_map_write  default_account  hardlimit  output_1  test_out  xcat.json
Repo/backup_files/bin_optimization_4/scripts/: append.tz  hardlimit.tz  int_int_contract.tz
Repo/backup_files/bin_optimization_4/scripts/problems/: dispatch.tz  int_publisher.tz  reveal_signed_preimage.tz
Repo/backup_files/bin_optimization_4/scripts/waited/: vote_for_delegate.tz
Repo/backup_files/bin_optimization_4/test/: Michelson_samples  test_translator.ml
Repo/backup_files/bin_optimization_4/test/bef/: sample_1
Repo/backup_files/bin_optimization_4/unused/bitvector/: .merlin
Repo/backup_files/bin_optimization_5/: README.md  dune  main.ml  michelson_interpreteur.ml  michelson_value_sampler.ml  michelson_value_sampler.mli  parse_parameters_storage.ml  rewriting_rules.ml  rewriting_rules.mli  stack_util.ml  tezos-opt.opam  tree.ml  tree.mli  utils_sampler.ml  utils_sampler.mli  z3util.ml
Repo/backup_files/bin_optimization_5/lib/: heuristics.ml  heuristics.mli  rewriting.ml
Repo/backup_files/bin_optimization_5/output/: append  output_3  reentrancy  test_re_int  xcat
Repo/backup_files/bin_optimization_5/scripts/: cons_twice.tz  int_int_contract.tz
Repo/backup_files/bin_optimization_5/test/: template.ml  test_samplers.ml
Repo/bin_optimization/: README.md  dune  dune_back  main.ml  test_parser.ml  tezos-opt.opam
Repo/code-review/: bin_snoop.md  rules.md
Repo/config/: gpd  personal_access_token
Repo/z3_use_cases/: consts.ml  dune  enc_const.ml  enc_instructions.ml  sk_util.ml  stack.ml  stack_util.ml  z3util.ml
Tezos Learning/Michelson/: Michelson-contract-calling-convention.md
Tezos Learning/Michelson/Tutorial-in-Jupyter/: README.md  Untitled.ipynb
Tezos Learning/Tezos/: .Mockup.md.swp  Mockup.md  README.md
Tezos Learning/Tezos/Exercises/: helloInputAndStorage.tz  helloStorage.tz
Tezos Learning/Tezos/Exercises/01_fac/: factorial.tz
Tezos-Learning/Michelson/: Michelson-Programming-Language.md
Tezos-Learning/Tezos/: Mockup.md
Tezos-Learning/Tezos/Exercises/: helloInput.tz  helloTezos.tz
work-logs/: 02-04-2021.md  04-05-2021.md  07-04-2021.md  14-04-2021.md  20-04-2021.md  21-04-2021.md  22-04-2021.md  Michelson Programming Language.md  Tezos_blockchain_24032021.md  template.md
work-logs/imp_concls/: concls_design.md
(+16 files in other folders)
