;; See src/bin_optimization/dune to understand in detail how this file
;; compile the michelson optimization method

(executable
 (name main)
 (public_name tezos-opt)
 (package tezos-opt)
 (libraries tezos-base
 			tezos-stdlib-unix
            tezos-micheline
			tezos-client-base
			tezos-protocol-alpha
			alcotest-lwt
			tezos-protocol-environment
			tezos-protocol-alpha-parameters
			tezos-alpha-test-helpers)
 (flags (:standard -open Tezos_base__TzPervasives
                   -open Tezos_micheline
                   -open Tezos_protocol_alpha
                   -open Tezos_client_alpha
				   -open Tezos_protocol_environment_alpha
				   -open Tezos_stdlib_unix
				   -open Error_monad
				   -open Tezos_alpha_test_helpers)))
